<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NCWeather</string>
    <string name="image_description">天气图标</string>
    <string name="city">地点不明</string>
    <string name="weather">天气未知</string>
    <string name="temperature">温度未知</string>
    <string name="current_temperature">温度未知</string>
    <string name="fragment1">温度</string>
    <string name="fragment2">污染</string>
    <string name="fragment3">穿衣</string>
    <string name="fragment4">感冒</string>
    <string name="fragment5">运动</string>
    <string name="title_activity_province_list">ProvinceListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_city_list">CityListActivity</string>
    <string name="title_activity_my_favorite">MyFavoriteActivity</string>
    <string name="add_new">新增常用城市</string>

</resources>
